--- a/Vue.js快速入门/3.4.2/my-project/package.json
+++ b/Vue.js快速入门/3.4.2/my-project/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
