--- a/flutter/flutter_2019_08_29/android/app/build.gradle
+++ b/flutter/flutter_2019_08_29/android/app/build.gradle
@@ -14,6 +14,10 @@ if (flutterRoot == null) {
 apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+def keystorePropertiesFile = rootProject.file("key.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
     compileSdkVersion 27
 
@@ -29,15 +33,29 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        splits {
+    abi {
+        enable true
+        reset()
+        include 'x86', 'armeabi-v7a','x86_64'
+        universalApk true
+    }
+}
     }
 
-    buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+signingConfigs {
+    release {
+        keyAlias keystoreProperties['keyAlias']
+        keyPassword keystoreProperties['keyPassword']
+        storeFile file(keystoreProperties['storeFile'])
+        storePassword keystoreProperties['storePassword']
         }
+}
+buildTypes {
+    release {
+        signingConfig signingConfigs.release
     }
+}
 }
 
 flutter {
